Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/diq.json
+++ b/public_html/i18n/diq.json
@@ -48,6 +48,7 @@
 	"form-open": "Weqe akerê",
 	"form-reviewed": "weqe kontrol biya",
 	"form-mine": "Çımraviyarnayışê mı",
+	"form-drafts": "Teyna taslaği",
 	"wikiprojects": "Wikiprocey",
 	"form-wikiprojects-placeholder": "Namanê wikiproceyan bınusê...",
 	"submit": "Deqewtış",
@@ -55,6 +56,7 @@
 	"diff": "Ferq",
 	"editor": "Vurner",
 	"review": "Çım eşten",
+	"review-false": "Hereket icab nêkeno",
 	"history": "Tarix",
 	"talk": "Vatış",
 	"contribs": "İştıraki",
@@ -62,11 +64,18 @@
 	"compare": "Têversanayış",
 	"record-url-text": "vurnayışê $1 ($2 çekuy)",
 	"record-noeditor": "Vurnayoğ nêvineya",
+	"record-ores": "Skorê ORES'i: $1",
 	"article": "Meqale",
+	"compare-article-loading": "Revizyonê wesiqe bar beno...",
+	"footer-loadmore": "Dehana vêşi bar ke",
+	"footer-nomore": "Qeydo vêşi çıni yo",
 	"footer-commtech": "Community Tech",
 	"footer-poweredby": "Terefê $1 u $2",
 	"source": "Çıme",
 	"phabricator": "Phabricator",
 	"lboard-title": "Tabloy lideran",
-	"public-domain": "malê şari"
+	"close": "Racın",
+	"imageattr-logo": "Logoy CopyPatroli",
+	"public-domain": "malê şari",
+	"open-font-license": "Lisansê Tipê Nuştışi Akerê"
 }
