Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/diq.json
+++ b/public_html/i18n/diq.json
@@ -66,9 +66,9 @@
 	"record-noeditor": "Vurnayoğ nêvineya",
 	"record-ores": "Skorê ORES'i: $1",
 	"article": "Meqale",
-	"compare-article-loading": "Revizyonê wesiqe bar beno...",
+	"compare-article-loading": "Çımraviyarnayışê nuştey bar beno...",
 	"footer-loadmore": "Dehana vêşi bar ke",
-	"footer-nomore": "Qeydo vêşi çıni yo",
+	"footer-nomore": "Vêşêr qeydi çıniyê",
 	"footer-commtech": "Community Tech",
 	"footer-poweredby": "Terefê $1 u $2",
 	"source": "Çıme",
