--- a/public_html/i18n/gl.json
+++ b/public_html/i18n/gl.json
@@ -8,8 +8,37 @@
 	"documentation": "Documentación",
 	"feedback": "Comentarios",
 	"leaderboard": "Taboleiro dos revisores",
+	"zh-wikipedia": "Wikipedia en chinés",
+	"ja-wikipedia": "Wikipedia en xaponés",
+	"th-wikipedia": "Wikipedia en tailandés",
 	"en-wikipedia": "Wikipedia en inglés",
+	"ko-wikipedia": "Wikipedia en koreano",
+	"ca-wikipedia": "Wikipedia en catalán",
+	"hr-wikipedia": "Wikipedia en croata",
+	"cs-wikipedia": "Wikipedia en checo",
+	"da-wikipedia": "Wikipedia en danés",
+	"nl-wikipedia": "Wikipedia en neerlandés",
+	"fi-wikipedia": "Wikipedia en finés",
 	"fr-wikipedia": "Wikipedia en francés",
+	"de-wikipedia": "Wikipedia en alemán",
+	"hu-wikipedia": "Wikipedia en húngaro",
+	"it-wikipedia": "Wikipedia en italiano",
+	"no-wikipedia": "Wikipedia en noruegués (Bokmål)",
+	"nn-wikipedia": "Wikipedia en noruegués (Nynorsk)",
+	"pl-wikipedia": "Wikipedia en polaco",
+	"pt-wikipedia": "Wikipedia en portugués",
+	"ro-wikipedia": "Wikipedia en romanés",
+	"sr-wikipedia": "Wikipedia en serbio",
+	"sk-wikipedia": "Wikipedia en eslovaco",
+	"sl-wikipedia": "Wikipedia en esloveno",
+	"es-wikipedia": "Wikipedia en castelán",
+	"sv-wikipedia": "Wikipedia en sueco",
+	"ar-wikipedia": "Wikipedia en árabe",
+	"el-wikipedia": "Wikipedia en grego",
+	"he-wikipedia": "Wikipedia en hebreo",
+	"fa-wikipedia": "Wikipedia en persa",
+	"ru-wikipedia": "Wikipedia en ruso",
+	"tr-wikipedia": "Wikipedia en turco",
 	"login": "Rexistro",
 	"logout": "Saír",
 	"header-loggedin": "Está conectado comoː $1.",
