Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/ko.json
+++ b/public_html/i18n/ko.json
@@ -47,6 +47,8 @@
 	"submit": "제출",
 	"page": "문서",
 	"diff": "차이",
+	"editor": "편집자",
+	"review": "검토",
 	"review-false": "필요한 작업 없음",
 	"history": "역사",
 	"talk": "토론",
@@ -62,6 +64,7 @@
 	"source": "출처",
 	"phabricator": "파브리케이터",
 	"footer-imageattr": "그림 속성",
+	"lboard-title": "순위 목록",
 	"close": "닫기",
 	"imageattr-title": "그림 속성",
 	"public-domain": "퍼블릭 도메인",
