--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -79,6 +79,8 @@
   "footer-broughtby": "Brought to you by $1",
   "footer-commtech": "Community Tech",
   "footer-poweredby": "Powered by $1 and $2",
+  "search": "Search",
+  "search-page": "Search by page title",
   "source": "Source",
   "phabricator": "Phabricator",
   "footer-imageattr": "Image attribution",
