Add search by page title (#49)
* Add searching by page title, remove wikiproject search

* Fix empty Wproject link

* Make requested changes - filter input, remove confusing double radio btn

* Fix styling

* Make naming consistent and use mysql_escape_string for escaping

* Fix load more and use CONCAT

* Continuation records

* Fix formatting of Less file

* Update wikiproject string color

* Update wikiproject string color

--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -79,6 +79,7 @@
   "footer-broughtby": "Brought to you by $1",
   "footer-commtech": "Community Tech",
   "footer-poweredby": "Powered by $1 and $2",
+  "search": "Search for page title:",
   "source": "Source",
   "phabricator": "Phabricator",
   "footer-imageattr": "Image attribution",
