--- a/public_html/i18n/qqq.json
+++ b/public_html/i18n/qqq.json
@@ -104,5 +104,6 @@
 	"js-undo-own-only": "Alert shown to user when they try to undo other people's reviews",
 	"js-unknown-error": "Alert shown to user when results could not be loaded, possibly due to connection issues, asking them to try again",
 	"permalink": "Text for a permanent link to a particular record.\n{{Identical|Permalink}}",
+	"search": "String label for a search box",
 	"show-all-records": "Label for the button to show all records. This button is shown when the user went to a permalink that shows a single record."
 }
