i18n: Add simple english
Bug: T318032

--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -41,6 +41,7 @@
   "fa-wikipedia": "Persian Wikipedia",
   "ru-wikipedia": "Russian Wikipedia",
   "tr-wikipedia": "Turkish Wikipedia",
+  "simple-wikipedia": "Simple English Wikipedia",
   "login": "Login",
   "logout": "Logout",
   "header-loggedin": "You are logged in as: $1",
