Add option to search reviews by user
This aims to fulfill a requested feature to search through reviews done by
someone else.

* Searching by "reviewed cases" now shows a box for filtering by reviewer.
* The `filterUser` parameter can now be used to filter users.
* The leaderboard now includes a link to the user's reviews.
* Added an i18n message and its respective `qqq` entry.
* Converted the search area to CSS grid.

Bug: T331219

--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -81,6 +81,7 @@
   "footer-commtech": "Community Tech",
   "footer-poweredby": "Powered by $1 and $2",
   "search": "Search for page title:",
+  "filter-user": "Search reviews by user:",
   "source": "Source",
   "phabricator": "Phabricator",
   "footer-imageattr": "Image attribution",
