--- a/public_html/i18n/qqq.json
+++ b/public_html/i18n/qqq.json
@@ -89,6 +89,7 @@
 	"footer-commtech": "Footer text - name of team.",
 	"footer-poweredby": "Footer text to highlight sources used for development. \n\nParameters:\n* $1 - String ('Eranbot', which maintains the database).\n* $2 - String ('Turnitin', the service used for plagiarism detection).",
 	"search": "String label for a search box",
+	"filter-user": "String label for username filter",
 	"source": "Footer link to source code ('''Not reference source''') for application\n{{Identical|Source}}",
 	"phabricator": "Footer link to phabricator workboard for application",
 	"footer-imageattr": "Footer link to open a pop up box to show attributions for images used in app",
