Search interface improvements
This makes a few interface improvements related to #157 and the search form.

* `reviewed` class converted to `data-filter` attribute. This means additional
  future search inputs can be controlled with similar CSS.
* The "Search reviews by user" field now appears as soon as "Reviewed cases"
  is selected as a filter.
* `search-form` class removed from the search form fieldset, the `filters-form`
  ID now handles that. Styles updated accordingly.
* The leaderboard reviews search link now has an appropriate `title` attribute.
* `search-page` i18n key renamed to `searchCriteria-page`. Since it looks like
  this key never really existed, this shouldn't be a problem.
* `search` i18n key renamed to `filter-page` to remove ambiguity and match its
  variable name in code. This isn't mission-critical, and could be dropped
  should it be problematic for @translatewiki.

--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -80,8 +80,9 @@
   "footer-broughtby": "Brought to you by $1",
   "footer-commtech": "Community Tech",
   "footer-poweredby": "Powered by $1 and $2",
-  "search": "Search for page title:",
+  "filter-page": "Search for page title:",
   "filter-user": "Search reviews by user:",
+  "searchCriteria-page": "Pages",
   "source": "Source",
   "phabricator": "Phabricator",
   "footer-imageattr": "Image attribution",
@@ -90,6 +91,7 @@
   "lboard-month": "Cases closed in the last 30 days",
   "lboard-alltime": "All time cases closed",
   "lboard-back": "Back to CopyPatrol",
+  "lboard-count-title": "See $1 cases reviewed by this user",
   "close": "Close",
   "imageattr-title": "Image attribution",
   "imageattr-logo": "CopyPatrol logo",
