--- a/public_html/i18n/qqq.json
+++ b/public_html/i18n/qqq.json
@@ -88,8 +88,9 @@
 	"footer-broughtby": "Footer text to indicate author. \n\nParameters: \n* $1 - String; name of the team (community tech).",
 	"footer-commtech": "Footer text - name of team.",
 	"footer-poweredby": "Footer text to highlight sources used for development. \n\nParameters:\n* $1 - String ('Eranbot', which maintains the database).\n* $2 - String ('Turnitin', the service used for plagiarism detection).",
-	"search": "String label for a search box",
+	"filter-page": "String label for a search box",
 	"filter-user": "String label for username filter",
+	"searchCriteria-page": "Pages",
 	"source": "Footer link to source code ('''Not reference source''') for application\n{{Identical|Source}}",
 	"phabricator": "Footer link to phabricator workboard for application",
 	"footer-imageattr": "Footer link to open a pop up box to show attributions for images used in app",
@@ -98,6 +99,7 @@
 	"lboard-month": "Column title for number of records closed last month by each person (top 10 only)",
 	"lboard-alltime": "Column title for the total number of records closed by each person (top 10 only)",
 	"lboard-back": "Button text to go back to CopyPatrol from leaderboard page",
+	"lboard-count-title": "Hover text for Leaderboard reviewed cases count (links to user reviewed cases search)",
 	"close": "Button text to close pop up box. \n{{Identical|Close}}",
 	"imageattr-title": "Title for popup box to show image attributions",
 	"imageattr-logo": "Title of logo, links to file.",
