Disbale 'Compare' btn and show source when source is not a URL

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -100,5 +100,6 @@
   "permalink": "Permalink",
   "show-all-records": "Show all records",
   "access-blocked": "You are currently $1 on $2 and are unable to use CopyPatrol.",
-  "blocked": "blocked"
+  "blocked": "blocked",
+  "non-internet-source": "(non-internet source)"
 }
