Show edit size, summary, and tags for each edit
Also cache the WikiRepository::draftsExist() query, which takes >100ms

Update composer packages

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -101,5 +101,7 @@
   "show-all-records": "Show all records",
   "access-blocked": "You are currently $1 on $2 and are unable to use CopyPatrol.",
   "blocked": "blocked",
-  "non-internet-source": "(non-internet source)"
+  "non-internet-source": "(non-internet source)",
+  "tags": "Tags",
+  "edit-summary": "Edit summary"
 }
