--- a/i18n/en.json
+++ b/i18n/en.json
@@ -66,7 +66,7 @@
 	"record-url-text": "$1 of edit",
 	"record-noeditor": "No editor found",
 	"record-noeditor-tooltip": "The revision may have been deleted or the data is not yet available in Labs database.",
-	"record-ores": "ORES score: $1",
+	"record-damage": "Damage score: $1",
 	"article": "Article",
 	"compare-article-loading": "Loading article revision...",
 	"compare-source-loading": "Loading possible copyvio source...",
