Prevent users from reviewing their own edits
Update NPM dependencies

Fix bug with undoing reviews

Disable Docker tests since that all needs to be rewritten anyway

Bug: T334272

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -96,6 +96,7 @@
 	"js-dberror": "There was an error in connecting to database.",
 	"js-undo-own-only": "You can only undo your own reviews.",
 	"js-unknown-error": "An unknown error occurred when loading results. Please try again.",
+	"js-self-review": "You cannot review your own edits.",
 	"permalink": "Permalink",
 	"show-all-records": "Show all records",
 	"access-blocked": "You are currently $1 on $2 and are unable to use CopyPatrol.",
